--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -423,8 +423,8 @@ li {
 
 .top {
     position:fixed;
-    bottom:50px;
-    right:50px;
+    bottom:10px;
+    right:10px;
 }
 
 /* Media Queries
@@ -447,7 +447,12 @@ there.
 @media (min-width: 750px) {}
 
 /* Larger than desktop */
-@media (min-width: 1000px) {}
+@media (min-width: 1000px) {
+  .top {
+    bottom:50px;
+    right:50px;
+}
+}
 
 /* Larger than Desktop HD */
 @media (min-width: 1200px) {}
